--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Project - Learn JSON</title>
+  <link rel="shortcut icon" href="http://faviconist.com/icons/0b767661244021079052644320e4f613/favicon.ico" />
 </head>
 <body>
 
