made more changes to styling

--- a/index.html
+++ b/index.html
@@ -6,42 +6,49 @@
   <link rel="shortcut icon" href="http://faviconist.com/icons/0b767661244021079052644320e4f613/favicon.ico" />
   <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
+
 <body>
-  <form class="input">
-    <input class="movie" type="text" name="movie" placeholder="What movie would you like to search?">
-    <input class="submit" type="submit">
-  </form>
 
-  <div class="result">
+  <div class="container">
+
+    <form class="input">
+      <input class="movie" type="text" name="movie" placeholder="What movie would you like to search?">
+      <input class="submit" type="submit">
+    </form>
+
+    <div class="result">
+
+    </div>
+
+    <div class="data">
+      <div class="headline">
+        <h1></h1>
+        <h2></h2>
+        <p class="ratings">imdb Rating: <span></span></p>
+        <p class="runtime"></p>
+      </div>
+
+      <div class="top">
+        <p class="actors">Actors: <span></span></h2>
+      </div>
+
+      <div class="middle">
+        <p class="plot"><span></span></p>
+      </div>
+
+      <div class="bottom">
+        <p class="director">Director: <span></span></p>
+        <p class="writer">Writer: <span></span></p>
+        <p class="country">Country: <span></span></p>
+        <p class="genre">Genre: <span></span></p>
+        <p class="awards">Awards: <span></span></p>
+      </div>
+    </div>
+
+    <div class="poster"></div>
 
   </div>
 
-  <div class="data">
-    <div class="headline">
-      <h1></h1>
-      <h2></h2>
-      <p class="ratings">imdb Rating: <span></span></p>
-      <p class="runtime"></p>
-    </div>
-
-    <div class="top">
-      <p class="actors">Actors: <span></span></h2>
-    </div>
-
-    <div class="middle">
-      <p class="plot"><span></span></p>
-    </div>
-
-    <div class="bottom">
-      <p class="director">Director: <span></span></p>
-      <p class="writer">Writer: <span></span></p>
-      <p class="country">Country: <span></span></p>
-      <p class="genre">Genre: <span></span></p>
-      <p class="awards">Awards: <span></span></p>
-    </div>
-  </div>
-
-  <div class="poster"></div>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
 </body>
