slight adjustments to margin top for data and poster divs

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="headline">
         <h1></h1>
         <h2></h2>
-        <p class="ratings">imdb Rating: <span></span></p>
+        <p class="ratings">IMDb Rating: <span></span></p>
         <p class="runtime"></p>
       </div>
 
